added ability to delete beads @jforsyth